continue to go test_option

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>PaizaClone</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= Gon::Base.render_data %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container" style="position: relative;"> 
+      <%= yield %>
+    </div>
   </body>
 </html>
