--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -1,3 +1,68 @@
 // Place all the styles related to the challenges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.title-block {
+  height: 100px;
+  color: white;
+  background-color: #343a40;
+  margin-top: 5px;
+}
+
+.title {
+  text-align: center;
+  line-height: 100px;
+  font-size: 28px;
+}
+
+.content {
+  background-color: #becbd9;
+  text-align: center;
+  line-height: 50px;
+  font-size: 28px;
+  &.description {
+    background-color: olivedrab;
+    font-size: 20px;
+  }
+}
+
+// 埋め込みエディタ
+#editor {
+  margin: 0;
+  position: absolute;
+  top: 173px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 248px;
+}
+
+div.output {
+  width: 100%;
+  margin: 0 0;
+  background-color: lightblue;
+  height: 30%;
+  position: absolute;
+  top: 445px;
+  left: 0%;
+  height: 200px;
+}
+
+#try {
+  width: 18%;
+}
+
+#result {
+  width: 100%;
+  height: 80%;
+  border: 1px solid black;
+  position: absolute;
+  top: 38px;
+  left: 15px;
+}
+      
+.output-block {
+  border: 1px solid black;
+}  
+
+
