first version complete

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="col-6 col-md-4 output-block">
       <p>結果：</p>
-      <div></div>
+      <div id="final_result"></div>
     </div>
   </div>
 </div>
