--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,11 +1,9 @@
 <div class="row title-block">
   <div class="col-md-6 offset-md-3 title"><%= @challenge.title %></div>
 </div> 
-
-<div class="row content description">
-  <div class="col-md-6 offset-md-3"><%= @challenge.description %></div>
+<div class="row content-block description">
+  <div class="col-md-6"><%= @challenge.description %></div>
 </div>
-<br>
 
 <div id="editor">エディタにデフォルトで入れたいコードはココに書く</div>
 
