--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -2,27 +2,61 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  max-height: 100vh;
+  // min-width: 767px;
+}
+
+header {
+  position: fixed;
+  top: 0px;
+  width: 100vw;
+  z-index: 100;
+}
+
+aside {
+  position: fixed;
+  width: 30%;
+  height: 100vh;
+  // background-color: white;
+  border-right: 1px solid black;
+}
+
+.main-bar {
+  margin-top: 40px;
+  margin-left: 30%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+ul {
+
+}
+
 .title-block {
-  height: 100px;
-  color: white;
-  background-color: #343a40;
+  height: 50px;
+  // color:;
+  // background-color: #4b6075;
   margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .title {
   text-align: center;
-  line-height: 100px;
+  line-height: 50px;
   font-size: 28px;
 }
 
-.content {
+.content-block {
   background-color: #becbd9;
-  text-align: center;
+  // text-align: center;
   line-height: 50px;
   font-size: 28px;
+  box-shadow: 6px 7px 7px grey;
+  border-radius: 5px;
   &.description {
-    background-color: olivedrab;
-    font-size: 20px;
+    background-color: #607D8B;
+    font-size: 18px;
   }
 }
 
@@ -63,6 +97,4 @@ div.output {
       
 .output-block {
   border: 1px solid black;
-}  
-
-
+} 
