--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <title>PaizaClone</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,11 +11,14 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= Gon::Base.render_data %>
+    <script src="https://kit.fontawesome.com/5938649cb0.js"></script>
   </head>
 
   <body>
-    <div class="container" style="position: relative;"> 
+    <header>
+      <%= render 'layouts/navigation_bar' %>
+    </header>
+    <%# bootatrap container %>
       <%= yield %>
-    </div>
   </body>
 </html>
