--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -32,16 +32,7 @@ nav {
   text-align: center;
 }
 
-
-// @media (max-width: 1263px){
-//   .mg-rl {
-//     margin-left: 64%
-//   }
-// }
-
-@media (max-width: 1000px){
-  
+.bg-cus {
+  background-color: #e8e8e8;
 }
-@media (max-width: 767px){
-  
-}
+
