--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,36 +1,40 @@
-<div class="row title-block">
-  <div class="col-md-6 offset-md-3 title"><%= @challenge.title %></div>
-</div> 
-<div class="row content-block description">
-  <div class="col-md-6"><%= @challenge.description %></div>
-</div>
+<aside>
+  <%= render 'share/side_bar' %>
+</aside> 
+<div class="main-bar">
+  <div class="row title-block">
+    <div class="col-md-6 offset-md-3 title"><%= @challenge.title %></div>
+  </div> 
+  <div class="row content-block description">
+    <div class="col-md-6"><%= @challenge.description %></div>
+  </div>
 
-<div id="editor">エディタにデフォルトで入れたいコードはココに書く</div>
+  <div id="editor">エディタにデフォルトで入れたいコードはココに書く</div>
 
-<div class="output">
-  <button id="try" class="btn btn-primary" style="margin-left: 40%;">送信</button>
-  <div class="row output-blocks" id="result">
-    <div class="col-6 col-md-4 output-block">
-      <p>入力値：</p>
-      <div><%= @challenge.tests.first.input %></div>
-    </div>
-    <div class="col-6 col-md-4 output-block">
-      <p>期待値：</p>
-      <div><%= @challenge.tests.first.expect %></div>
-    </div>
-    <div class="col-6 col-md-4 output-block">
-      <p>結果：</p>
-      <div id="final_result"></div>
+  <div class="output">
+    <button id="try" class="btn btn-danger" style="margin-left: 40%;">提出</button>
+    <div class="row output-blocks" id="result">
+      <div class="col-6 col-md-4 output-block">
+        <p>入力値：</p>
+        <div><%= @challenge.tests.first.input %></div>
+      </div>
+      <div class="col-6 col-md-4 output-block">
+        <p>期待値：</p>
+        <div><%= @challenge.tests.first.expect %></div>
+      </div>
+      <div class="col-6 col-md-4 output-block">
+        <p>結果：</p>
+        <div id="final_result"></div>
+      </div>
     </div>
   </div>
 </div>
-
 <script>
   var editor = ace.edit("editor");
   editor.$blockScrolling = Infinity;
   editor.setTheme("ace/theme/monokai");
   editor.getSession().setMode("ace/mode/ruby");
-  editor.setFontSize(20);
+  editor.setFontSize(14);
 </script>
 
 <script>
@@ -55,5 +59,4 @@ $(function(){
     
   });
 });
-
 </script>
